<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.webonise.listviewandsqlite.DetailsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
   <TextView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:text="@string/hello_world"
       android:gravity="center"/>
    <EditText
        style="@style/filler"
        android:id="@+id/et_name"
        android:hint="@string/hintName"
       />
    <EditText
        style="@style/filler"
        android:id="@+id/et_age"
        android:hint="@string/hintAge"
        android:inputType="number"
        android:layout_below="@+id/et_name"
        />
    <EditText
        style="@style/filler"
        android:id="@+id/et_height"
        android:hint="@string/hintWeight"
        android:inputType="number"
        android:layout_below="@+id/et_age"
        />
    <EditText
        style="@style/filler"
        android:id="@+id/et_weight"
        android:hint="@string/hintHeight"
        android:inputType="number"
        android:layout_below="@+id/et_height"
        />
    <Button
        style="@style/filler"
        android:id="@+id/btn_Save"
        android:layout_below="@+id/et_weight"
        android:text="@string/textSave"
        />

</RelativeLayout>
