<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6dip"
    android:descendantFocusability="blocksDescendants"
    >


    <LinearLayout
        style="@style/filler">
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:layout_weight="2"/>
        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Age"
            android:layout_weight="7"/>

        <ImageButton
            android:src="@drawable/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Delete"
            android:id="@+id/deletor"
            android:layout_weight="1"
            android:focusable="false"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="vertical">
    <TextView
        android:id="@+id/tvHieght"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Height"
        android:layout_weight="5"/>

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Weight"
        android:layout_weight="5"/>
    </LinearLayout>


</LinearLayout>